更新readme文件，windows启动方式修改